Uploaded images and fonts and made small style changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: 'logo-font';
+  src: url('assets/fonts/logo-font/plate-gt-two-four-mt-std-regular.otf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
